<resources>
    <string name="app_name" translatable="false">Simple Fitness Records 0.1</string>
    <string name="new_">New</string>
    <string name="settings">Settings</string>
    <string name="stop">Stop</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="table_in_log" translatable="false">Log table SQL</string>
    <string name="add">Add</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="exercise">Exercise</string>
    <string name="exercise_group">Group</string>
    <string name="weight">Weight</string>
    <string name="repeats">Repeats</string>
    <string name="day">Day</string>
    <string name="info">Info</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="muscle">Muscle</string>
    <string name="are_you_shure">Are you sure to delete?\nAll data will be cleaned!</string>



    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="text_size">Text size</string>
    <string name="default_text_size" translatable="false">20</string>

    <!-- Messages Preferences -->
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="text_settings">Text settings</string>
    <string name="group_of_muscles">Group of muscle</string>
    <string name="muscles_of_group">Muscles of group</string>
    <string name="exercises">Exercises</string>
    <string name="editName">Edit name</string>
</resources>